# video-streaming-service

./: Cargo.toml  Makefile  README.md  compose-dev.yml
core/: Cargo.toml
core/src/: s3.rs
scripts/localstack/: setup.sh
services/notification/: Cargo.toml  Dockerfile
services/notification/src/: main.rs
services/transcoding/: Cargo.toml  Dockerfile
services/transcoding/src/: main.rs
services/video/: Cargo.toml  Dockerfile
services/video/src/: main.rs
services/video/src/models/: upload.rs
services/video/src/v1/: mod.rs
services/video/src/v1/routes/: mod.rs  upload.rs
