[workspace]
resolver = "2"

members = [
    "core",
    "services/notification",
    "services/transcoding",
    "services/video",
]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower-http = { version = "0.6.2", features = ["trace", "compression-gzip"] }
async-nats = { version = "0.38.0" }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.72.0" }
uuid = { version = "1.12.1", features = ["v4"] }

[workspace.package]
version = "0.0.1"
authors = ["Reece Rose <reecerose18@gmail.com>"]
description = ""
