[package]
name = "video"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
